tests/lean/276.lean.expected.out
276.lean:5:27-5:50: error: failed to elaborate eliminator, expected type is not available
fun {α : Sort v} => @?m α : {α : Sort v} → @?m α
276.lean:9:32-9:55: error: failed to elaborate eliminator, expected type is not available
